--- a/client/games-project/index.html
+++ b/client/games-project/index.html
@@ -8,9 +8,11 @@
 
 		<script src="https://cdn.jsdelivr.net/npm/stream-chat-react"></script>
 		<script src="https://cdn.tailwindcss.com"></script>
+		<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 	</head>
 	<body>
 		<div id="root"></div>
 		<script type="module" src="/src/main.jsx"></script>
+		<script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 	</body>
 </html>
