--- a/chatbox.html
+++ b/chatbox.html
@@ -3,23 +3,23 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="chatStyle.css" />
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css" integrity="sha384-BY+fdrpOd3gfeRvTSMT+VUZmA728cfF9Z2G42xpaRkUGu2i3DyzpTURDo5A6CaLK" crossorigin="anonymous" />
 		<title>Chat</title>
-		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
 		<div class="container">
-			<p>Bang banggg..</p>
+			<img src="/w3images/bandmember.jpg" alt="Avatar" />
+			<p>mancing ga?</p>
 			<span class="time-right">11:00</span>
 		</div>
-
 		<div class="container darker">
-			<p>Gas Mabar?</p>
+			<img src="/w3images/avatar_g2.jpg" alt="Avatar" class="right" />
+			<p>Gas, mancing</p>
 			<span class="time-left">11:01</span>
 		</div>
-
-		<div class="container">
-			<p>GASSS</p>
-			<span class="time-right">11:02</span>
-		</div>
+		<input type="text" />
+		<button>send</button>
 	</body>
 </html>
